# hv_local

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  USING_TEMPLATE.md  docker-compose.yml  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: post-checkout  post-merge
custom_components/homevolt/: README.md  __init__.py  api.py  binary_sensor.py  capacity.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  processor.py  sensor.py
custom_components/homevolt/translations/: en.json
ha_template/: __init__.py  env.py  git_setup.py  ha_manager.py  hacs_installer.py  ports.py
homeassistant/: automations.yaml  configuration.yaml  scenes.yaml  scripts.yaml  secrets.yaml
homeassistant/custom_components/: homevolt
scripts/: configure_repo.py  ha_manager.py
tests/: test_bms_modules.py  test_docker_control.py  test_env_manager.py  test_git_setup.py  test_hacs_installer.py  test_home_assistant_manager.py  test_live_homevolt.py  test_port_allocator.py  test_user_setup.py
tests/custom_components/homevolt/: test_capacity.py  test_processor.py
